--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="btn">Answer 4</button>
         </div>
         <button id="next-btn">Next</button>
+        <button id="restart-btn">Restart</button>
         </div>
     </div>
     <script src="script.js"></script>
