Added Quiz Maker!

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="title">
+        <h1>Quiz Taker</h1>
+        <p>- Take Your Quiz -</p>
+    </div>
+    <div class="topnav">
+        <a href="#" onclick="transitionPage('create.html')">Quiz Maker</a>
+    </div>
     <div class ="container">
         <h1>Anime & Manga Trivia Blast</h1>
         <div class ="quiz">
